--- a/ClientApp/src/components/Game.js.org
+++ b/ClientApp/src/components/Game.js.org
@@ -3,26 +3,18 @@ import ReactDOM from 'react-dom/client';
 import './index.css';
 import reportWebVitals from './reportWebVitals';
 import firebase from 'firebase/compat/app';
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+import 'firebase/compat/auth';
+import 'firebase/compat/firestore';
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyDR5RHtYnqrVFczxk5JgDP3R6zD5SJVLvU",
-  authDomain: "gomoku-ad695.firebaseapp.com",
-  projectId: "gomoku-ad695",
-  storageBucket: "gomoku-ad695.appspot.com",
-  messagingSenderId: "1094967554954",
-  appId: "1:1094967554954:web:1274f002a045de64360e73",
-  measurementId: "G-TK62D1JYM2"
-};
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+firebase.initializeApp({
+    apiKey: "AIzaSyDR5RHtYnqrVFczxk5JgDP3R6zD5SJVLvU",
+    authDomain: "gomoku-ad695.firebaseapp.com",
+    projectId: "gomoku-ad695",
+    storageBucket: "gomoku-ad695.appspot.com",
+    messagingSenderId: "1094967554954",
+    appId: "1:1094967554954:web:1274f002a045de64360e73",
+    measurementId: "G-TK62D1JYM2"
+});
 
 const roomNumber = sessionStorage.getItem('input_number');
 const db = firebase.firestore();
